feat(preprocessing.sh to add, modify manifest.json in build):

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,5 +18,8 @@
         "./static/css/main.d41ed950.css"
       ]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  }
 }
