--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jetbrains/icons": "^3.20.0",
     "@jetbrains/ring-ui": "^5.0.85",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
