--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cheerio": "^1.0.0-rc.12",
+    "rc-dropdown": "^4.0.1",
+    "rc-menu": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "4.4.5",
     "react-image": "3.0.3",
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-scripts": "5.0.1",
+    "react-tooltip": "4.5.1",
     "sb": "^6.5.15",
     "web-vitals": "^2.1.4"
   },
@@ -70,6 +74,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "serve": "^14.1.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   }
 }
