--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/chrome": "^0.0.206",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "jsdoc": "3.6.11",
     "prop-types": "^15.8.1",
     "serve": "^14.1.2",
     "typescript": "^4.9.4",
