change icon, fix manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,11 @@
   "author": "nhannht",
   "manifest_version": 3,
   "version": "0.1.0",
+  "icons": {
+    "16": "icons/appicon-style-larva-wisdom-computation-meditation-flat-icon-33881868.png",
+    "48": "icons/appicon-style-larva-wisdom-computation-meditation-flat-icon-33881868.png",
+    "128": "icons/appicon-style-larva-wisdom-computation-meditation-flat-icon-33881868.png"
+  },
   "content_scripts": [
     {
       "matches": [
