--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
           prerelease: false
       - name: Package release
         run: |
+          yarn build
           zip -r release.zip build
           echo "::set-output name=release_zip::release.zip"
       - name: Upload Release Asset
