fix release.yml 4

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,9 @@ jobs:
           prerelease: false
       - name: Package release
         run: |
-          apt update
-          apt install npm
-          npm install -g yarn
+          sudo apt update
+          sudo apt install npm
+          sudo npm install -g yarn
           yarn install
           yarn build
           zip -r release.zip build
