--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build && yarn preprocessing",
+    "build_final": "craco build && yarn preprocessing",
+    "build": "craco build",
     "preprocessing": "bash preprocessing.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
