fix release.yml 6, unset CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           sudo npm install -g yarn
           yarn install
           echo "Run yarn build"
+          unset CI
           yarn build
           echo "Run preprocessing.sh"
           yarn preprocessing
