--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -16,7 +16,7 @@ jobs:
           sudo apt install npm
           sudo npm install -g yarn
       - name: Install dependencies
-        runs: |
+        run: |
           yarn add --dev jsdoc@3.6.11 better-docs parcel
       - name: Build doc
         run: |
