--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
-name: github create release
+name: Create release
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["GitHub pages"]
+    types:
+      - completed
 
 jobs:
   release:
