--- a/package.json
+++ b/package.json
@@ -74,12 +74,11 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/chrome": "^0.0.206",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "better-docs": "^2.7.2",
-    "docdash": "^2.0.1",
     "jsdoc": "3.6.11",
     "parcel": "^2.8.2",
     "prop-types": "^15.8.1",
     "serve": "^14.1.2",
+    "tui-jsdoc-template": "^1.2.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   }
