--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -43,8 +43,11 @@ jobs:
           yarn build
           echo "Run preprocessing.sh"
           yarn preprocessing
-          zip -r release.zip build
+      - name: Zip release
+        run: |
+          zip -r ../release.zip *
           echo "::set-output name=release_zip::release.zip"
+        working-directory: ./build
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
