--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
+    "new-github-issue-url": "^1.0.0",
     "rc-dropdown": "^4.0.1",
     "rc-menu": "^9.8.1",
     "react": "^18.2.0",
@@ -20,7 +21,9 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "4.2.21",
     "sb": "^6.5.15",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wink-eng-lite-web-model": "^1.4.3",
+    "wink-nlp": "^1.13.0"
   },
   "scripts": {
     "start": "craco start",
@@ -75,6 +78,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/chrome": "^0.0.206",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "browserify": "^17.0.0",
     "jsdoc": "3.6.11",
     "parcel": "^2.8.2",
     "prop-types": "^15.8.1",
