--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "craco start",
     "build_final": "craco build && yarn preprocessing",
     "build": "craco build",
-    "docs": "jsdoc -c jsdoc.json",
+    "docs": "mkdir docs_static && cp -rf showcases/ docs_static/ && jsdoc -c jsdoc.json",
     "preprocessing": "bash preprocessing.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
