feat: add codiga

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,7 +1,7 @@
 name: "CodeQl scanning"
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop,master ]
   pull_request:
     branches: [ master ]
     paths-ignore:
